--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,54 @@
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.left-part {
+  width: 50%;  
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
+}
+
+.left-part .choise-form-type {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.left-part .choise-form-type label {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.left-part .add {
+  padding: 20px 5%;
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.left-part .add label {
+  margin: 20px 0px;
+}
+
+input, select {
+  outline: none
+}
+
+select {
+  margin: 10px 0;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.left-part .add {
+  align-self: center;
 }
